# phosphorus_cli

./: Cargo.toml  README.md
src/: cli_io.rs  config.rs  downloader.rs  downloader.rs.old  main.rs  main.rs.old  player.rs
src/ui/: app_msg.rs  app_window.rs  event.rs  help_window.rs  mod.rs  player_bar.rs  playlist_list.rs  querier.rs  queue.rs  status_bar.rs  welcome_window.rs
src/ui/player_bar/: mod.rs
src/ui/search_bar/: mod.rs  search_bar_raw.rs
src/ui/secondary_window/: help_window.rs  mod.rs  playlist_window.rs  results_window.rs  results_windows.rs
src/ui/top_bar/: download_tracker.rs  mod.rs  search_bar.rs
