[package]
name = "phosphorus-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plugin_manager = { path = "../plugin_manager" }
youtube = { path = "../plugins/youtube" }
tokio = { version = "1", features = ["full"] }
rodio = "0.16.0"
ascii_table = "4.0.2"
terminal_size = "0.2.1"
directories = "4.0.1"
termprogress = { version = "0.3.4", features = ["size"] }
inquire = "0.4.0"
regex = "1.6.0"
