[package]
name = "phosphorus-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
youtube = { path = "../plugins/youtube" }
phosphorus_core = { path = "../phosphorus_core" }
tokio = { version = "1", features = ["full"] }
rodio = "0.19.0"
ascii_table = "4.0.2"
terminal_size = "0.2.1"
directories = "4.0.1"
termprogress = { version = "0.3.4", features = ["size"] }
inquire = "0.5.3"
regex = "1.6.0"
tuirealm = "^1.9.2"
tui-realm-stdlib = { version = "^1.3.2", default-features = false, features = ["ratatui"] }